--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-modal": "^3.13.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
@@ -21,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-dropdown": "^1.11.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "typescript": "4.9.5"
   }
 }
