--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-modal": "^3.13.1",
+    "cookies-next": "^2.1.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
@@ -23,6 +24,7 @@
     "react-dropdown": "^1.11.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
+    "recoil": "^0.7.7",
     "typescript": "4.9.5"
   }
 }
