--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "@next/font": "13.1.6",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
+    "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "18.0.11",
     "@types/react-modal": "^3.13.1",
+    "@types/react-radio-group": "^3.0.4",
     "cookies-next": "^2.1.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
     "react-dropdown": "^1.11.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
+    "react-radio-group": "^3.0.3",
     "recoil": "^0.7.7",
     "typescript": "4.9.5"
   }
