--- a/package.json
+++ b/package.json
@@ -44,12 +44,15 @@
     "react-modal": "^3.16.1",
     "react-radio-group": "^3.0.3",
     "react-select": "^5.7.3",
+    "venom-bot": "^5.0.16",
     "recoil": "^0.7.7",
     "typescript": "4.9.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react-leaflet": "^3.0.0",
-    "@types/react-select": "^5.0.1"
+    "@types/react-select": "^5.0.1",
+    "ts-node": "^10.9.1",
+    "rimraf": "^5.0.1"
   }
 }
