--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@mui/styles": "^5.13.2",
     "@mui/system": "5.11.9",
     "@mui/x-date-pickers": "^6.4.0",
-    "@react-pdf/renderer": "^3.1.14",
+    "@react-pdf/renderer": "^3.4.2",
     "@types/leaflet": "^1.9.3",
+    "@types/swiper": "^6.0.0",
     "apexcharts": "3.37.0",
     "axios": "^1.6.2",
     "cookies-next": "^2.1.1",
@@ -39,8 +40,12 @@
     "react-dom": "^18.2.0",
     "react-imask": "^7.1.3",
     "react-leaflet": "^4.2.1",
+    "react-pdf": "^7.7.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-use": "^17.5.0",
     "recoil": "^0.7.7",
     "simplebar-react": "^3.2.1",
+    "swiper": "^11.1.1",
     "typescript": "4.9.5",
     "uuid": "^9.0.0",
     "yup": "1.0.0"
