--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-apexcharts": "1.4.0",
     "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
+    "react-google-calendar-api": "^2.3.0",
     "react-imask": "^7.1.3",
     "react-leaflet": "^4.2.1",
     "react-pdf": "^7.7.1",
