--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "2.29.3",
     "firebase": "^9.17.1",
     "formik": "2.2.9",
+    "framer-motion": "^12.7.4",
     "imask": "^7.1.3",
     "leaflet": "^1.9.4",
     "next": "13.1.6",
