--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-leaflet": "^4.2.1",
     "react-pdf": "^7.7.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^11.0.5",
     "react-use": "^17.5.0",
     "recoil": "^0.7.7",
     "simplebar-react": "^3.2.1",
